--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,18 +21,16 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
-          cache-dependency-path: frontend/package.json
+          cache-dependency-path: package.json
 
       - name: Install dependencies
         run: npm install
-        working-directory: frontend
 
       - name: Build
         run: npm run build
-        working-directory: frontend
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: frontend/dist
+          folder: dist
           branch: gh-pages
